--- a/iChef/Base.lproj/Main.storyboard
+++ b/iChef/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="receptiTableCell" id="Dit-48-4VV" customClass="ReceptiTableViewCell">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="receptiTable" id="Dit-48-4VV" customClass="ReceptiTableViewCell">
                                 <rect key="frame" x="0.0" y="86" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Dit-48-4VV" id="wdw-b8-KNL">
@@ -30,6 +30,7 @@
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="receptSlana" destination="5xz-B3-6EF" id="yFJ-h0-yeN"/>
+                                    <outlet property="receptiSlana" destination="5xz-B3-6EF" id="I0v-Lj-ayN"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
