--- a/iChef/Base.lproj/Main.storyboard
+++ b/iChef/Base.lproj/Main.storyboard
@@ -21,7 +21,17 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5xz-B3-6EF">
-                                            <rect key="frame" x="20" y="9" width="42" height="32"/>
+                                            <rect key="frame" x="84" y="-10" width="42" height="32"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HYr-cd-ccj">
+                                            <rect key="frame" x="2" y="1" width="74" height="42"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t77-3f-P7d">
+                                            <rect key="frame" x="84" y="20" width="42" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="highlightedColor"/>
@@ -31,6 +41,8 @@
                                 <connections>
                                     <outlet property="receptSlana" destination="5xz-B3-6EF" id="yFJ-h0-yeN"/>
                                     <outlet property="receptiSlana" destination="5xz-B3-6EF" id="I0v-Lj-ayN"/>
+                                    <outlet property="receptiSlanaDetalji" destination="t77-3f-P7d" id="y3q-1R-Ocb"/>
+                                    <outlet property="slaneSlike" destination="HYr-cd-ccj" id="BjZ-Ai-4Wl"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -43,7 +55,7 @@
                     <navigationItem key="navigationItem" title="Slana jela" id="FXp-A6-fX1">
                         <barButtonItem key="leftBarButtonItem" title="Nazad" id="BW5-s1-B2S">
                             <connections>
-                                <segue destination="CZ4-MO-1fc" kind="modal" id="5tQ-L7-6qv"/>
+                                <segue destination="8YX-ce-x5E" kind="modal" id="dQL-L3-d6A"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -119,12 +131,34 @@
                     <view key="view" contentMode="scaleToFill" id="m4e-tx-YHc">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KaG-qD-9r4">
+                                <rect key="frame" x="0.0" y="38" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="Hyj-vG-13e" id="dRl-14-xtj"/>
+                                </connections>
+                            </searchBar>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Sta kuhati?" id="sph-Vd-Ylz"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="searchDisplayController" destination="c4I-nO-j34" id="VrZ-Zz-Km8"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6lI-Q2-6I7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="c4I-nO-j34">
+                    <connections>
+                        <outlet property="delegate" destination="Hyj-vG-13e" id="1hR-iB-tg4"/>
+                        <outlet property="searchBar" destination="KaG-qD-9r4" id="VZu-bd-A0M"/>
+                        <outlet property="searchContentsController" destination="Hyj-vG-13e" id="Lgw-ZH-1on"/>
+                        <outlet property="searchResultsDataSource" destination="Hyj-vG-13e" id="Zzx-Ht-71S"/>
+                        <outlet property="searchResultsDelegate" destination="Hyj-vG-13e" id="xpt-jk-zA4"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="129" y="868"/>
         </scene>
@@ -179,7 +213,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZYN-ZY-Mkm">
-                                            <rect key="frame" x="55" y="5" width="42" height="21"/>
+                                            <rect key="frame" x="55" y="-1" width="42" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="highlightedColor"/>
@@ -188,7 +222,7 @@
                                 </tableViewCellContentView>
                                 <string key="reuseIdentifier">receptiSlatkiTable	</string>
                                 <connections>
-                                    <outlet property="receptiSlatka" destination="ZYN-ZY-Mkm" id="qew-gq-0Cp"/>
+                                    <outlet property="receptiSlatka" destination="ZYN-ZY-Mkm" id="sgT-GD-exI"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -200,7 +234,7 @@
                     <navigationItem key="navigationItem" title="Slatka jela" id="bQv-HQ-EdF">
                         <barButtonItem key="leftBarButtonItem" title="Nazad" id="oDF-Y2-xEE">
                             <connections>
-                                <segue destination="QUy-BD-bpt" kind="modal" id="GmL-ki-r5a"/>
+                                <segue destination="8YX-ce-x5E" kind="modal" id="22g-NK-0ld"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -257,9 +291,8 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="wKi-xW-Iff"/>
-        <segue reference="GmL-ki-r5a"/>
         <segue reference="zhl-W8-Cb1"/>
-        <segue reference="5tQ-L7-6qv"/>
+        <segue reference="dQL-L3-d6A"/>
+        <segue reference="wKi-xW-Iff"/>
     </inferredMetricsTieBreakers>
 </document>
