--- a/iChef/Base.lproj/Main.storyboard
+++ b/iChef/Base.lproj/Main.storyboard
@@ -4,10 +4,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <scenes>
-        <!--Recepti Table View Controller - Slana jela-->
+        <!--Recepti Slana Table View Controller - Slana jela-->
         <scene sceneID="3Ay-6f-F2x">
             <objects>
-                <tableViewController id="5gt-Km-gCs" customClass="ReceptiTableViewController" sceneMemberID="viewController">
+                <tableViewController id="5gt-Km-gCs" customClass="ReceptiSlanaTableViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="k5B-9T-gcE">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -97,7 +97,6 @@
                                                     </state>
                                                     <connections>
                                                         <action selector="infoClicked:" destination="CZ4-MO-1fc" eventType="touchUpInside" id="mWl-sf-AEc"/>
-                                                        <action selector="informationClicked:" destination="FmX-Uq-ZIw" eventType="touchUpInside" id="Pf8-fR-mcy"/>
                                                     </connections>
                                                 </button>
                                             </subviews>
