--- a/iChef/Base.lproj/Main.storyboard
+++ b/iChef/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A598" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="8YX-ce-x5E">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="8YX-ce-x5E">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
         <!--Recepti Slana Table View Controller - Slana jela-->
@@ -397,11 +397,11 @@
             </objects>
             <point key="canvasLocation" x="2967" y="262"/>
         </scene>
-        <!--Navigation Controller - Item-->
+        <!--Navigation Controller - Pretrazi-->
         <scene sceneID="Ows-QE-qSS">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="wRp-Vf-dis" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="DdY-mC-bZJ"/>
+                    <tabBarItem key="tabBarItem" title="Pretrazi" id="DdY-mC-bZJ"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="DTu-uY-l83">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
